implementación agregar más de 1 solicitante

--- a/src/app/components/footer-menu/footer-menu.component.html
+++ b/src/app/components/footer-menu/footer-menu.component.html
@@ -8,7 +8,7 @@
         <ion-icon name="list-outline"></ion-icon>
       </ion-button>
       <ion-button fill="clear" (click)="goTo('/equipos')" class="footer-icon-btn">
-        <ion-icon name="people-outline"></ion-icon>
+        <ion-icon name="hardware-chip-outline"></ion-icon>
       </ion-button>
       <ion-button fill="clear" (click)="goTo('/perfil')" class="footer-icon-btn">
         <ion-icon name="person-circle-outline"></ion-icon>
