--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -28,7 +28,7 @@
         </ion-button>
       </form>
       <div class="home-image-container">
-        <img src="assets\img\LOGO_RIDS.png" alt="Decoración Home" />
+        <img src="../assets/img/LOGO_RIDS.png" alt="Decoración Home" />
       </div>
     </div>
   </div>
