--- a/src/app/components/footer-menu/footer-menu.component.html
+++ b/src/app/components/footer-menu/footer-menu.component.html
@@ -10,6 +10,9 @@
       <ion-button fill="clear" (click)="goTo('/equipos')" class="footer-icon-btn">
         <ion-icon name="hardware-chip-outline"></ion-icon>
       </ion-button>
+      <ion-button fill="clear" (click)="goTo('/agregar-equipos')" class="footer-icon-btn">
+        <ion-icon name="laptop-outline"></ion-icon>
+      </ion-button>
       <ion-button fill="clear" (click)="goTo('/perfil')" class="footer-icon-btn">
         <ion-icon name="person-circle-outline"></ion-icon>
       </ion-button>
